[package]
name = "pokerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net","macros","rt-multi-thread","io-util","sync"] }
fltk = { version = "^1.3", features = ["fltk-bundled"] }
rand = "*"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
